# Project3_Completed

./: main.py
Project3_UI_Testing/: CMakeLists.txt  DataComparison.cpp  DataComparison.h  HelperFunctions.cpp  HelperFunctions.h  IncludeStatements.h  Main_page.h  Movie.h  Results_Page.h  Trie.cpp  Trie.h  main.cpp
